[project]
name = "sftp-connector-cdk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
]

[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sftp_connector_helper"]
