[project]
name = "sftp-connector-event-writer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests"]
