[project]
name = "sftp-connector-joiner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43,<2",
]

[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
